--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/cli": "~11.0.5",
     "@angular/compiler-cli": "~11.0.5",
     "@types/node": "^12.11.1",
+    "angular-cli-ghpages": "^1.0.0-rc.1",
     "codelyzer": "^6.0.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
