--- a/angular.json
+++ b/angular.json
@@ -120,7 +120,7 @@
         "deploy": {
           "builder": "angular-cli-ghpages:deploy",
           "options": {
-            "baseHref": "https://b-caby.github.io/angular-portfolio/"  
+            "base-href": "https://b-caby.github.io/angular-portfolio/"  
           }
         }
       }
